--- a/index.html
+++ b/index.html
@@ -1,12 +1,23 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="uk">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Bakery</title>
   </head>
   <body>
-    <header></header>
+    <header>
+      <nav>
+        <a href="./index.html">shop bakery</a>
+        <ul>
+          <li><a href="">Наші традиції</a></li>
+          <li><a href="">Шеф-кухарі</a></li>
+          <li><a href="">Формати</a></li>
+          <li><a href="">Контакти</a></li>
+        </ul>
+        <button type="button">Замовити дзвінок</button>
+      </nav>
+    </header>
     <main></main>
     <footer></footer>
   </body>
