add section hero

--- a/index.html
+++ b/index.html
@@ -18,6 +18,20 @@
         <button type="button">Замовити дзвінок</button>
       </nav>
     </header>
+    <section>
+      <h1>Сучасна пекарня</h1>
+      <ul>
+        <li>
+          <p>Великий попит на ринку </p>
+        </li>
+        <li>
+          <p>Доступні за бюджетом формати</p>
+        </li>
+        <li>
+          <p>Досвідчена управлінська команда</p>
+        </li>
+      </ul>
+    </section>
     <main></main>
     <footer></footer>
   </body>
