--- a/index.html
+++ b/index.html
@@ -32,6 +32,17 @@
         </li>
       </ul>
     </section>
+    <section>
+      <h2>Новий формат традицій</h2>
+      <p>shop bakery — це пекарня, яка взяла все найкраще, і зберегла смак традиційної випічки та натуральність інгредієнтів.</p>
+      <p>Ми працюємо як найвідоміші мережі— 
+        5 хвилин і замовлення готове. 
+        А ще у наших пекарень стильний дизайн 
+        та висока якість обслуговування!</p>
+        <img src="./img/f1f2d771dd900b0f74ca05de8c496007.png" alt="bakery man with bread" width="393" height="466">
+        
+
+    </section>
     <main></main>
     <footer></footer>
   </body>
