add colors section header

--- a/index.html
+++ b/index.html
@@ -4,46 +4,74 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Bakery</title>
+    <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
     <header>
       <nav>
-        <a href="./index.html">shop bakery</a>
+        <a class="logo" href="./index.html">shop bakery</a>
         <ul>
-          <li><a href="">Наші традиції</a></li>
-          <li><a href="">Шеф-кухарі</a></li>
-          <li><a href="">Формати</a></li>
-          <li><a href="">Контакти</a></li>
+          <li><a class="nav-link" href="">Наші традиції</a></li>
+          <li><a class="nav-link" href="">Шеф-кухарі</a></li>
+          <li><a class="nav-link" href="">Формати</a></li>
+          <li><a class="nav-link" href="">Контакти</a></li>
         </ul>
         <button type="button">Замовити дзвінок</button>
       </nav>
     </header>
-    <section>
-      <h1>Сучасна пекарня</h1>
-      <ul>
-        <li>
-          <p>Великий попит на ринку </p>
-        </li>
-        <li>
-          <p>Доступні за бюджетом формати</p>
-        </li>
-        <li>
-          <p>Досвідчена управлінська команда</p>
-        </li>
-      </ul>
-    </section>
-    <section>
-      <h2>Новий формат традицій</h2>
-      <p>shop bakery — це пекарня, яка взяла все найкраще, і зберегла смак традиційної випічки та натуральність інгредієнтів.</p>
-      <p>Ми працюємо як найвідоміші мережі— 
-        5 хвилин і замовлення готове. 
-        А ще у наших пекарень стильний дизайн 
-        та висока якість обслуговування!</p>
-        <img src="./img/f1f2d771dd900b0f74ca05de8c496007.png" alt="bakery man with bread" width="393" height="466">
-        
-
-    </section>
-    <main></main>
+    <main>
+      <section>
+        <h1>Сучасна пекарня</h1>
+        <ul>
+          <li>
+            <p>Великий попит на ринку</p>
+          </li>
+          <li>
+            <p>Доступні за бюджетом формати</p>
+          </li>
+          <li>
+            <p>Досвідчена управлінська команда</p>
+          </li>
+        </ul>
+      </section>
+      <section>
+        <h2>Новий формат традицій</h2>
+        <p>
+          shop bakery — це пекарня, яка взяла все найкраще, і зберегла смак
+          традиційної випічки та натуральність інгредієнтів.
+        </p>
+        <p>
+          Ми працюємо як найвідоміші мережі— 5 хвилин і замовлення готове. А ще
+          у наших пекарень стильний дизайн та висока якість обслуговування!
+        </p>
+        <img
+          src="./img/f1f2d771dd900b0f74ca05de8c496007.png"
+          alt="bakery man with bread"
+          width="393"
+          height="466"
+        />
+      </section>
+      <section>
+        <h2>Наші найкращі шеф -кухарі</h2>
+        <ul>
+          <li>
+            <h3>Настя</h3>
+            <p>Привіт, я Настя!</p>
+            <p>Вже 10 років, я свтілюю у життя цікаві та смачні ідеї.</p>
+            <p>Я випічу для вас найсмачніщі вироби!</p>
+          </li>
+          <li>
+            <h3>Влад</h3>
+            <p>Привіт, я Влад!</p>
+            <p>
+              Мій кодитерський стаж вже 18 років. SHOP BEKERY - це наша любов, з
+              якою ми ділимось кожен раз з Вами через нашу випічку!
+            </p>
+            <p>Я зроблю для вас унікальну начинку на будь який смак!</p>
+          </li>
+        </ul>
+      </section>
+    </main>
     <footer></footer>
   </body>
 </html>
