--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
           <li><a class="nav-link" href="">Формати</a></li>
           <li><a class="nav-link" href="">Контакти</a></li>
         </ul>
-        <button type="button">Замовити дзвінок</button>
+        <button class="button" type="button">Замовити дзвінок</button>
       </nav>
     </header>
     <main>
